--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
     "next": "^16.0.10",
+    "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
